--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "sennka-libs",
-  "version": "0.0.3",
+  "version": "0.0.1",
   "description": "This is my library of front-end tools",
-  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf ./libs && babel ./src -d ./libs -s",
+    "build": "babel ./src -d ./libs -s",
+    "prebuild": "rm -rf ./libs",
     "watch": "babel ./src -d ./libs -w -s"
   },
   "repository": {
@@ -25,9 +25,10 @@
   "homepage": "https://github.com/ryuusennka/sennka-libs#readme",
   "devDependencies": {
     "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
-    "babel-preset-minify": "^0.5.1"
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6"
   },
-  "dependencies": {}
+  "dependencies": {
+    "core-js": "3"
+  }
 }
